update custom_components/ via HACS

--- a/custom_components/goodwe/translations/en.json
+++ b/custom_components/goodwe/translations/en.json
@@ -11,7 +11,8 @@
         "step": {
             "user": {
                 "data": {
-                    "host": "IP Address"
+                    "host": "IP Address",
+                    "model_family": "Inverter Family (optional)"
                 },
                 "description": "Connect to inverter",
                 "title": "GoodWe inverter"
