--- a/custom_components/envisalink_new/translations/en.json
+++ b/custom_components/envisalink_new/translations/en.json
@@ -8,14 +8,18 @@
           "port": "Port",
           "user_name": "Username",
           "password": "Password",
-          "evl_version": "Envisalink version",
-          "panel_type": "Panel type"
+          "partition_set": "Partition list",
+          "zone_set": "Zone list",
+          "code": "Alarm code",
+          "discovery_port": "Discovery Port"
         }
       }
     },
     "error": {
       "cannot_connect": "Cannot connect.",
       "invalid_auth": "Invalid authentication credentials",
+      "invalid_zone_spec": "Invalid zone specification",
+      "invalid_partition_spec": "Invalid partition specification",
       "unknown": "Unknown error"
     },
     "abort": {
@@ -26,9 +30,24 @@
     "step": {
       "init": {
         "data": {
+          "Basic": "Basic",
+          "Advanced": "Advanced"
+        }
+      },
+      "basic": {
+        "data": {
+          "host": "Hostname",
+          "port": "Port",
+          "user_name": "Username",
+          "password": "Password",
           "zone_set": "Zone list",
           "partition_set": "Partition list",
           "code": "Alarm code",
+          "discovery_port": "Discovery Port"
+        }
+      },
+      "advanced": {
+        "data": {
           "panic_type": "Panic type",
           "keepalive_interval": "Keep-alive interval",
           "zonedump_interval": "Zone dump interval",
@@ -41,8 +60,8 @@
     "error": {
       "cannot_connect": "Cannot connect.",
       "invalid_auth": "Invalid authentication credentials",
-      "invalid_zone_spec": "invalid zone specification",
-      "invalid_partition_spec": "invalid partition specification",
+      "invalid_zone_spec": "Invalid zone specification",
+      "invalid_partition_spec": "Invalid partition specification",
       "unknown": "Unknown error"
     }
   }
