--- a/custom_components/goodwe/translations/en.json
+++ b/custom_components/goodwe/translations/en.json
@@ -19,6 +19,30 @@
             }
         }
     },
+    "entity": {
+        "select": {
+            "operation_mode": {
+                "state": {
+                    "backup": "Backup mode",
+                    "eco": "Eco mode",
+                    "eco_charge": "Eco charge mode",
+                    "eco_discharge": "Eco discharge mode",
+                    "general": "General mode",
+                    "off_grid": "Off grid mode",
+                    "peak_shaving": "Peak shaving mode"
+                }
+            }
+        },
+        "sensor": {
+            "grid_in_out_label": {
+                "state": {
+                    "0": "Idle",
+                    "1": "Exporting",
+                    "2": "Importing"
+                }
+            }
+        }
+    },
     "options": {
         "step": {
             "init": {
