--- a/custom_components/goodwe/translations/cs.json
+++ b/custom_components/goodwe/translations/cs.json
@@ -24,6 +24,12 @@
         "button": {
             "synchronize_clock": {
                 "name": "Synchronizovat hodiny střídače"
+            },
+            "start_inverter": {
+                "name": "Start střídače"
+            },
+            "stop_inverter": {
+                "name": "Stop střídače"
             }
         },
         "number": {
@@ -38,6 +44,12 @@
             },
             "grid_export_limit": {
                 "name": "Limit dodávky do sítě"
+            },
+            "fast_charging_power": {
+                "name": "Rychlé nabíjení výkon"
+            },
+            "fast_charging_soc": {
+                "name": "Rychlé nabíjení stav baterie"
             }
         },
         "select": {
@@ -50,7 +62,9 @@
                     "eco_discharge": "Režim ekonomického vybíjení",
                     "general": "Obecný režim",
                     "off_grid": "Režim vypnuté sítě",
-                    "peak_shaving": "Režim pokrývání špiček"
+                    "peak_shaving": "Režim pokrývání špiček",
+                    "self_use": "Vlastní spotřeba"
+
                 }
             }
         },
@@ -67,6 +81,9 @@
             "grid_export_limit_switch": {
                 "name": "Řízení dodávky do sítě"
             },
+            "fast_charging_switch": {
+                "name": "Rychlé nabíjení"
+              },
             "load_control": {
                 "name": "Řízení zátěže"
             }
@@ -76,6 +93,10 @@
         "step": {
             "init": {
                 "data": {
+                    "host": "IP adresa",
+                    "protocol": "Protokol",
+                    "keep_alive": "TCP Keep alive",
+                    "model_family": "Typ protokolu [ET|DT|ES]",
                     "scan_interval": "Interval skenování (s)",
                     "network_retries": "Počet opakování síťového požadavku",
                     "network_timeout": "Časový limit síťového požadavku (s)"
