--- a/custom_components/solcast_solar/translations/pl.json
+++ b/custom_components/solcast_solar/translations/pl.json
@@ -16,6 +16,58 @@
                     "api_key": "Klucz API Solcast"
                 },
                 "description": "Twój klucz konta API Solcast"
+            },
+            "api": {
+                "data": {
+                    "api_key": "Klucz API Solcast"
+                },
+                "description": "Twój klucz konta API Solcast"
+            },
+            "dampen": {
+                "data": {
+                    "damp00": "00:00",
+                    "damp01": "01:00",
+                    "damp02": "02:00",
+                    "damp03": "03:00",
+                    "damp04": "04:00",
+                    "damp05": "05:00",
+                    "damp06": "06:00",
+                    "damp07": "07:00",
+                    "damp08": "08:00",
+                    "damp09": "09:00",
+                    "damp10": "10:00",
+                    "damp11": "11:00",
+                    "damp12": "12:00",
+                    "damp13": "13:00",
+                    "damp14": "14:00",
+                    "damp15": "15:00",
+                    "damp16": "16:00",
+                    "damp17": "17:00",
+                    "damp18": "18:00",
+                    "damp19": "19:00",
+                    "damp20": "20:00",
+                    "damp21": "21:00",
+                    "damp22": "22:00",
+                    "damp23": "23:00"
+                },
+                "description": "Zmodyfikuj godzinowy współczynnik tłumienia"
+            },
+            "customsensor": {
+                "data": {
+                    "customhoursensor": "Następny czujnik X godzin"
+                },
+                "description": "Niestandardowy czujnik całkowitej energii na następne X godzin"
+            },
+            "attributes": {
+                "data": {
+                    "attr_brk_estimate10": "Włącz podział szacunkowy 10",
+                    "attr_brk_estimate": "Włącz podział szacunkowy 50",
+                    "attr_brk_estimate90": "Włącz podział szacunkowy 90",
+                    "attr_brk_site": "Włącz podział witryny",
+                    "attr_brk_halfhourly": "Włącz szczegóły prognozy półgodzinnej",
+                    "attr_brk_hourly": "Włącz szczegółowe informacje godzinowe prognozy"
+                },
+                "description": "Wybierz atrybuty czujnika, które będą dostępne"
             }
         }
     },
@@ -52,8 +104,8 @@
     },
     "entity": {
         "sensor": {
-            "power_now_30m": {"name": "Moc - następne 30 minut"},
-            "power_now_1hr": {"name": "Moc - następne 60 minut"},
+            "power_now_30m": {"name": "Moc w 30 minut"},
+            "power_now_1hr": {"name": "Moc w 1 godzinę"},
             "total_kwh_forecast_today": {"name": "Prognoza na dzisiaj"},
             "peak_w_today": {"name": "Szczytowa moc dzisiaj"},
             "peak_w_time_today": {"name": "Czas szczytowej mocy dzisiaj"},
