--- a/custom_components/solcast_solar/translations/de.json
+++ b/custom_components/solcast_solar/translations/de.json
@@ -16,6 +16,58 @@
                     "api_key": "Solcast-API-Schlüssel"
                 },
                 "description": "Dein Solcast-API-Kontoschlüssel"
+            },
+            "api": {
+                "data": {
+                    "api_key": "Solcast-API-Schlüssel"
+                },
+                "description": "Ihr Solcast-API-Kontoschlüssel"
+            },
+            "dampen": {
+                "data": {
+                    "damp00": "00:00",
+                    "damp01": "01:00",
+                    "damp02": "02:00",
+                    "damp03": "03:00",
+                    "damp04": "04:00",
+                    "damp05": "05:00",
+                    "damp06": "06:00",
+                    "damp07": "07:00",
+                    "damp08": "08:00",
+                    "damp09": "09:00",
+                    "damp10": "10:00",
+                    "damp11": "11:00",
+                    "damp12": "12:00",
+                    "damp13": "13:00",
+                    "damp14": "14:00",
+                    "damp15": "15:00",
+                    "damp16": "16:00",
+                    "damp17": "17:00",
+                    "damp18": "18:00",
+                    "damp19": "19:00",
+                    "damp20": "20:00",
+                    "damp21": "21:00",
+                    "damp22": "22:00",
+                    "damp23": "23:00"
+                },
+                "description": "Ändern Sie den stündlichen Dämpfungsfaktor"
+            },
+            "customsensor": {
+                "data": {
+                    "customhoursensor": "Nächster X-Stunden-Sensor"
+                },
+                "description": "Benutzerdefinierter Sensor für die Gesamtenergie für die nächsten X Stunden"
+            },
+            "attributes": {
+                "data": {
+                    "attr_brk_estimate10": "Aktivieren Sie die Aufschlüsselung von Kostenvoranschlag 10",
+                    "attr_brk_estimate": "Aktivieren Sie die Aufschlüsselung von Kostenvoranschlag 50",
+                    "attr_brk_estimate90": "Aktivieren Sie die Aufschlüsselung von Kostenvoranschlag 90",
+                    "attr_brk_site": "Aktivieren Sie die Site-Aufschlüsselung",
+                    "attr_brk_halfhourly": "Aktivieren Sie die halbstündliche Detailprognose",
+                    "attr_brk_hourly": "Aktivieren Sie die stündlichen Detailprognose"
+                },
+                "description": "Wählen Sie die verfügbaren Sensorattribute aus"
             }
         }
     },
@@ -52,8 +104,8 @@
     },
     "entity": {
         "sensor": {
-            "power_now_30m": {"name": "Leistung kommende 30 Minuten"},
-            "power_now_1hr": {"name": "Leistung kommende 60 Minuten"},
+            "power_now_30m": {"name": "Leistung in 30 Minuten"},
+            "power_now_1hr": {"name": "Leistung in 1 Stunde"},
             "total_kwh_forecast_today": {"name": "Prognose heute"},
             "peak_w_today": {"name": "Prognose Spitzenleistung heute"},
             "peak_w_time_today": {"name": "Zeitpunkt Spitzenleistung heute"},
