update custom_components/ via HACS

--- a/custom_components/midea_ac/translations/en.json
+++ b/custom_components/midea_ac/translations/en.json
@@ -49,7 +49,8 @@
           "use_fan_only_workaround": "Use Fan-only Workaround",
           "show_all_presets": "Show All Presets",
           "additional_operation_modes": "Additional Operation Modes",
-          "max_connection_lifetime": "Maximum Connection Lifetime"
+          "max_connection_lifetime": "Maximum Connection Lifetime",
+          "use_alternate_energy_format": "Use Alternate Energy Format"
         },
         "data_description": {
           "temp_step": "Step size for temperature set point",
@@ -84,6 +85,11 @@
               "max": "Max",
               "auto": "Auto",
               "custom": "Custom"
+            }
+          },
+          "preset_mode": {
+            "state": {
+              "ieco": "iECO"
             }
           },
           "swing_mode": {
