--- a/custom_components/solcast_solar/translations/ur.json
+++ b/custom_components/solcast_solar/translations/ur.json
@@ -9,7 +9,7 @@
                     "api_key": "کلید (کوما سے الگ متعدد اقدار) API",
                     "api_quota": "کوٹہ (کوما سے الگ متعدد اقدار) API"
                 },
-                "description": "سولکاسٹ API اکاؤنٹ کی تفصیلات"
+                "description": "سولکاسٹ اکاؤنٹ کی تفصیلات"
             }
         }
     },
@@ -17,16 +17,18 @@
         "step": {
             "init": {
                 "data": {
-                    "solcast_config_action": "عمل"
+                    "api_key": "کلید (کوما سے الگ متعدد اقدار) API",
+                    "api_quota": "کوٹہ (کوما سے الگ متعدد اقدار) API",
+                    "customhoursensor": "حسب ضرورت نیکسٹ ایکس آور سینسر (منٹ=1، زیادہ سے زیادہ=144)",
+                    "attr_brk_estimate10": "تخمینہ 10 سینسر کی خصوصیات کو فعال کریں۔",
+                    "attr_brk_estimate": "تخمینہ 50 سینسر کی خصوصیات کو فعال کریں۔",
+                    "attr_brk_estimate90": "تخمینہ 90 سینسر کی خصوصیات کو فعال کریں۔",
+                    "attr_brk_site": "سائٹ کے بریک ڈاؤن سینسر کی خصوصیات کو فعال کریں۔",
+                    "attr_brk_halfhourly": "پیشن گوئی آدھے گھنٹے کی تفصیل کی خصوصیات کو فعال کریں۔",
+                    "attr_brk_hourly": "فی گھنٹہ کی تفصیلات کی پیشن گوئی کو فعال کریں۔",
+                    "config_damp": "فی گھنٹہ نم کرنے والے عوامل میں ترمیم کریں (جمع کرائیں پر کلک کرنے کے بعد)"
                 },
                 "description": "سولکاسٹ کنفیگریشن کے اختیارات"
-            },
-            "api": {
-                "data": {
-                    "api_key": "کلید (کوما سے الگ متعدد اقدار) API",
-                    "api_quota": "کوٹہ (کوما سے الگ متعدد اقدار) API"
-                },
-                "description": "سولکاسٹ API اکاؤنٹ کی تفصیلات"
             },
             "dampen": {
                 "data": {
@@ -56,36 +58,11 @@
                     "damp23": "23:00"
                 },
                 "description": "گھنٹہ وار ڈیمپنگ فیکٹر میں ترمیم کریں۔"
-            },
-            "customsensor": {
-                "data": {
-                    "customhoursensor": "اگلا X گھنٹے سینسر"
-                },
-                "description": "اگلے X گھنٹے کے لیے کل توانائی کے لیے حسب ضرورت سینسر"
-            },
-            "attributes": {
-                "data": {
-                    "attr_brk_estimate10": "تخمینہ 10 بریک ڈاؤن کو فعال کریں۔",
-                    "attr_brk_estimate": "تخمینہ 50 بریک ڈاؤن کو فعال کریں۔",
-                    "attr_brk_estimate90": "تخمینہ 90 بریک ڈاؤن کو فعال کریں۔",
-                    "attr_brk_site": "سائٹ کی خرابی کو فعال کریں۔",
-                    "attr_brk_halfhourly": "پیشن گوئی آدھے گھنٹے کی تفصیل کو فعال کریں۔",
-                    "attr_brk_hourly": "فی گھنٹہ کی پیشن گوئی کو فعال کریں۔"
-                },
-                "description": "سینسر کی وہ خصوصیات منتخب کریں جو دستیاب ہوں گی۔"
             }
         },
         "error": {
             "unknown": "نامعلوم خامی",
             "incorrect_options_action": "غلط عمل کا انتخاب کیا گیا ہے۔"
-        }
-    },
-    "selector": {
-        "solcast_config_action": {
-            "options": {
-                "configure_api": "سولکاسٹ API کلید",
-                "configure_dampening": "ڈیمپننگ کو ترتیب دیں۔"
-            }
         }
     },
     "system_health": {
